brat/test/golden/error/pair.brat.golden
Error in test/golden/error/pair.brat on line 5:
pair = row -- Distinct from a pair
       ^^^

  Type mismatch when checking row
Expected: (a1 :: [Int,Bool])
But got:  (a1 :: Int), (b1 :: Bool)


